[metadata]
name = htmloverpdf
description = Render a HTML overlay over existing PDF files.
long_description = file: README.rst
keywords = hacktoberfest pdf
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/htmloverpdf"
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    weasyprint
    pygobject
    cairocffi
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
